Changed the text for the blog page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head></head>
 	<body>
-		<h1>You will see some great content or not so great ;) content on my site in some days.</h1>
+		<h1>Coming Soon: Great content or not so great content ;)</h1>
 	</body>
 </html>
 
