Added some styling for the coming soon page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <html>
-	<head></head>
+	<head>
+		<style type="text/css" media="screen">
+			body {
+				width: 950px;
+				margin: auto;
+				background: #333;
+			}
+			
+			.comingsoon {
+				text-align:center;
+				position:relative;
+				top:240px;
+				color:#6FC4EB;
+			}			
+		</style>
+	</head>
 	<body>
-		<h1>Coming Soon: Great content or not so great content ;)</h1>
+		<h1 class="comingsoon">Coming Soon: Great content or not so great content ;)</h1>
 	</body>
 </html>
 
